--- a/style/scss/partials/_colors.scss
+++ b/style/scss/partials/_colors.scss
@@ -1,4 +1,4 @@
-/// To experiment use the _color-generator partial
+/// To experiment use the _color-generator partial. These are final colors to keep css from being huge.
 
 ////////////////////////////////////////////////////////////////////////////////
 // RED                                                                        //
