--- a/style/css/style.css
+++ b/style/css/style.css
@@ -5891,7 +5891,7 @@ a:link {
   font-weight: normal;
   font-size: 3vw; }
 
-.flex1, .flex1--column, .flex1__shell, .flex1__blue-frame, .chat__cloud, .scene__adventure--astronaut-ryan-bg, .scene__adventure--planet-bg, .scene__adventure--comet-bg, .scene__adventure--chat-arrow, .choices, .choices__button, .bioware-style-conversation-wheel {
+.flex1, .flex1__column, .flex1__shell, .flex1__blue-frame, .chat__cloud, .scene__adventure--astronaut-ryan-bg, .scene__adventure--planet-bg, .scene__adventure--comet-bg, .scene__adventure--chat-arrow, .choices, .choices__button, .bioware-style-conversation-wheel {
   display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
@@ -5971,7 +5971,7 @@ a:link {
   -ms-flex: 10;
   flex: 10; }
 
-.flex1--column {
+.flex1__column {
   -webkit-flex-direction: column;
   -ms-flex-direction: column;
   flex-direction: column; }
