--- a/style/scss/partials/_base.scss
+++ b/style/scss/partials/_base.scss
@@ -1,7 +1,7 @@
 ////////////////////////////////////////////////////////////////////////////////
 // BASE STYLES                                                                //
 ////////////////////////////////////////////////////////////////////////////////
-* { box-sizing: border-box }
+* { box-sizing: border-box }				///	mindblowing
 
 html {
 	font-size: 14px;						/// all rems are relative to this number
