--- a/style/scss/partials/_flex.scss
+++ b/style/scss/partials/_flex.scss
@@ -62,7 +62,7 @@
 	background-image: 		url(#{$svg-path}space-adventure__astronaut-ryan.svg);
 	background-position:	bottom;
 	background-repeat:		no-repeat;
-	margin-top:				2vmin;
+	margin-top:				2vmin;	///	keep hat out of the inset shadow
 }
 
 .scene__adventure--planet-bg {
